--- a/HelloService-8010/src/main/resources/application.yml
+++ b/HelloService-8010/src/main/resources/application.yml
@@ -1,12 +1,10 @@
 spring:
   application:
-    name: Ivokepplication
+    name: HelloApplication
 
 
 server:
-  port: 9000
-  servlet:
-    context-path: /invoke
+  port: 8010
 
 eureka:
   client:
@@ -14,6 +12,11 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     healthcheck:
       enabled: true
+
+
+
+
+#开启健康检查（需要spring-boot-starter-actuator依赖）
 #  instance:
 #    hostname: localhost
 #    instance-id: ${eureka.instance.hostname}:${server.port}
