--- a/HelloService/src/main/resources/application.yml
+++ b/HelloService/src/main/resources/application.yml
@@ -4,12 +4,14 @@ spring:
 
 
 server:
-  port: 8000
+  port: 8001
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+    healthcheck:
+      enabled: true
 #  instance:
 #    hostname: localhost
 #    instance-id: ${eureka.instance.hostname}:${server.port}
